--- a/.github-ci.yml
+++ b/.github-ci.yml
@@ -14,4 +14,5 @@ fi"
 displayName: Setup Variables name: Variables
 
 - bash: 
-echo "Service Version $(Variables.ServiceVersion)" displayName: Display variables
+echo "Service Version $(Variables.ServiceVersion)" 
+displayName: Display variables
