--- a/.github-ci.yml
+++ b/.github-ci.yml
@@ -1,18 +1,22 @@
-# ASP.NET Core
-# Build and test ASP.NET Core web applications targeting .NET Core.
-# https://aka.ms/yaml
+queue:
 
-queue: 'Hosted Linux Preview'
-variables:
-  buildConfiguration: 'Release'
+  name: Hosted VS2017
 
 steps:
-- bash: "if [[ $(build.sourceBranchName) =~ develop|master ]]; 
-then echo \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(build.buildNumber)\"; 
-else \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)\"; 
-fi" 
-displayName: Setup Variables name
 
-- bash: 
-echo "Service Version $(Variables.ServiceVersion)" 
-displayName: Display variables
+- bash: |
+   if [[ $(build.sourceBranchName) =~ develop|master ]]; 
+   then 
+   echo "##vso[task.setvariable variable=ServiceVersion]1.$(build.buildNumber)"
+   fi
+   
+   echo "No problem reading $SAUCE" 
+
+  displayName: 'Bash Script'
+
+- bash: 'echo "Service Version $SERVICEVERSION"' 
+
+  displayName: 'Display variables'
+
+
+
