--- a/.github-ci.yml
+++ b/.github-ci.yml
@@ -4,19 +4,13 @@ queue:
 
 steps:
 
-- bash: |
-   if [[ $(build.sourceBranchName) =~ develop|master ]]; 
-   then 
-   echo "##vso[task.setvariable variable=ServiceVersion]1.$(build.buildNumber)"
-   fi
-   
-   echo "No problem reading $SAUCE" 
+- bash: "if [[ $(build.sourceBranchName) =~ develop|master ]]; 
+then echo \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(build.buildNumber)\"; 
+else \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)\"; 
+fi" 
+displayName: Setup Variables name: Variables
 
-  displayName: 'Bash Script'
-
-- bash: 'echo "Service Version $SERVICEVERSION"' 
-
-  displayName: 'Display variables'
-
+- bash: echo "Service Version $(Variables.ServiceVersion)" 
+  displayName: Display variables
 
 
