--- a/.github-ci.yml
+++ b/.github-ci.yml
@@ -5,8 +5,10 @@ then echo \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(bui
 else \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)\"; 
 fi" 
 displayName: Setup Variables name: Variables
+trigger: manual
 
 - bash: echo "Service Version $(Variables.ServiceVersion)" 
   displayName: Display variables
+  trigger: manual
 
 
