--- a/.github.yml
+++ b/.github.yml
@@ -1,13 +1,14 @@
 steps:
 
-- bash: "if [[ $(build.sourceBranchName) =~ develop|master ]]; 
-then echo \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(build.buildNumber)\"; 
-else \"##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)\"; 
-fi" 
+- bash: |
+if [[ $(build.sourceBranchName) =~ develop|master ]]; 
+then echo "##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(build.buildNumber)"
+else echo "##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)"
+fi 
 displayName: Setup Variables name: Variables
 trigger: manual
 
-- bash: echo "Service Version $(Variables.ServiceVersion)" 
+- bash: echo '"Service Version $(Variables.ServiceVersion)"'
   displayName: Display variables
   trigger: manual
 
