--- a/.github.yml
+++ b/.github.yml
@@ -3,7 +3,7 @@ steps:
 - bash: |
 if [[ $(build.sourceBranchName) =~ develop|master ]]; 
 then echo "##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(build.buildNumber)"
-else echo "##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)"
+else "##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)"
 fi 
 displayName: Setup Variables name: Variables
 trigger: manual
