--- a/.github.yml
+++ b/.github.yml
@@ -1,15 +1,18 @@
 steps:
 
 - bash: |
-if [[ $(build.sourceBranchName) =~ develop|master ]]; 
-then echo "##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(build.buildNumber)"
-else "##vso[task.setvariable variable=ServiceVersion;isOutput=true]0.$(build.buildNumber)"
-fi 
-displayName: Setup Variables name: Variables
+   if [[ $(build.sourceBranchName) =~ develop|master ]]; 
+   then 
+   echo "##vso[task.setvariable variable=ServiceVersion]1.$(build.buildNumber)"
+   fi
+   
+  displayName: 'Bash Script'
 
 
-- bash: echo '"Service Version $(Variables.ServiceVersion)"'
-  displayName: Display variables
+
+- bash: 'echo "Service Version $SERVICEVERSION"' 
+
+  displayName: 'Display variables'
 
 
 
