--- a/.github.yml
+++ b/.github.yml
@@ -3,7 +3,7 @@ steps:
 - bash: |
    if [[ $(build.sourceBranchName) =~ develop|master ]]; 
    then 
-   echo "##vso[task.setvariable variable=ServiceVersion]1.$(build.buildNumber)"
+   echo "##vso[task.setvariable variable=ServiceVersion;isOutput=true]1.$(build.buildNumber)"
    fi
 
   displayName: 'Bash Script'
