--- a/.github.yml
+++ b/.github.yml
@@ -15,6 +15,9 @@ steps:
 
   displayName: 'Display variables'
 
+- bash: echo "##vso[build.updatebuildnumber]$SERVICEVERSION"
+
+  displayName: 'resetvar'
 
 
 
