--- a/.github.yml
+++ b/.github.yml
@@ -13,7 +13,7 @@ steps:
 
 - bash: 'echo "Service Version $SERVICEVERSION"' 
 
-        'echo "##vso[build.updatebuildnumber]$SERVICEVERSION"'
+        echo "##vso[build.updatebuildnumber]$SERVICEVERSION"
 
  displayName: 'Display variables'
 
