--- a/.github.yml
+++ b/.github.yml
@@ -18,7 +18,7 @@ steps:
 
 - bash: echo "##vso[build.updatebuildnumber]$SERVICEVERSION"
 
-  displayName: 'resetvar'
+  displayName: 'resetnumber'
  
 
 
