--- a/.github.yml
+++ b/.github.yml
@@ -1,5 +1,9 @@
 steps:
+ktuikdj
 
+fytuyt
+yuifyu'tdhsr''
+drtyhdr
 - bash: |
    if [[ $(build.sourceBranchName) =~ develop|master ]]; 
    then 
@@ -20,5 +24,6 @@ steps:
   displayName: 'resetnumber'
  
 
-
-
+dfsdag
+dhsrht
+io;
